// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageBody is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPageBody testClass1 testClass2 css-c6c8s4-euiPageBody-euiPageRestictWidthStyles"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPageBody panelled also accepts panelProps 1`] = `
<div
  class="euiPanel euiPanel--subdued euiPageBody css-eltxgr-euiPanel-grow-none-subdued-euiPageBody-euiPageRestictWidthStyles"
/>
`;

exports[`EuiPageBody panelled can be set to true 1`] = `
<div
  class="euiPanel euiPanel--plain euiPageBody css-10pvzin-euiPanel-grow-none-plain-hasShadow-euiPageBody-euiPageRestictWidthStyles"
/>
`;

exports[`EuiPageBody restrict width can be set to a custom number 1`] = `
<div
  aria-label="aria-label"
  class="euiPageBody testClass1 testClass2 css-xgzueq-euiPageBody-euiPageRestictWidthStyles"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPageBody restrict width can be set to a custom value and measurement 1`] = `
<div
  aria-label="aria-label"
  class="euiPageBody testClass1 testClass2 css-1iejxkd-euiPageBody-euiPageRestictWidthStyles"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPageBody restrict width can be set to a default 1`] = `
<div
  aria-label="aria-label"
  class="euiPageBody testClass1 testClass2 css-abz4z5-euiPageBody-euiPageRestictWidthStyles"
  data-test-subj="test subject string"
/>
`;
